# magic-video

./: .gitignore  .ruff.toml  README.md  langgraph.json  pyproject.toml
src/llms/: __init__.py  llm.py
src/video/: graph.py  script.md
tests/unit_tests/: test_llm.py
